Bug 331063 - Hardcoded shellDirs in plasma-framework/src/shell/shellmanager.cpp
Summary: Hardcoded shellDirs in plasma-framework/src/shell/shellmanager.cpp
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR major
Target Milestone: 1.0
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-12 20:05 UTC by Hrvoje Senjan
Modified: 2014-02-19 11:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2014-02-12 20:05:47 UTC
static const QString s_shellsDir(
        QString(CMAKE_INSTALL_PREFIX) + "/" + DATA_INSTALL_DIR + "/" + "plasma/shells/");

So if you install plasma-framework in prefix 'a' and kde-workspace in prefix 'b', you'll get 
"We have no shell handlers installed"

Reproducible: Always
Comment 1 Sebastian Kügler 2014-02-13 13:52:36 UTC
Ivan, I think you wrote that code, any particular reason for not using QStandardPaths?
Comment 2 Ivan Čukić 2014-02-13 17:01:03 UTC
I copied it from somewhere else in plasma. Thought there was a reason for not using QSP :)
Comment 3 Hrvoje Senjan 2014-02-19 11:12:47 UTC
Git commit dde1da619e94001391697d55edeb3df54d43bb37 by Hrvoje Senjan.
Committed on 19/02/2014 at 11:15.
Pushed by hrvojes into branch 'master'.

Use QStandardPaths for finding plasma shells instead of hardcoding to install prefix

Otherwise plasma shells are never found if plasma-framework and
kde-workspace are installed to different prefixes

REVIEW: 115871

M  +3    -2    src/shell/shellmanager.cpp

http://commits.kde.org/plasma-framework/dde1da619e94001391697d55edeb3df54d43bb37