Use QStandardPaths for finding plasma shells instead of hardcoding to install prefix

Otherwise plasma shells are never found if plasma-framework and
kde-workspace are installed to different prefixes

REVIEW: 115871
BUG: 331063